--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Amphitheatre Farm.</h1>
+<p>A farmer and a forest witch on Wadawurrung country.</p>
 </body>
   <head><script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2bfc98911a3907bd46c12f077/7eb722c8d42a1efab3dc20079.js");</script></head>
 </html>
