--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <p>A farmer and a forest witch on Wadawurrung country.</p>
 </body>
   <head><script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2bfc98911a3907bd46c12f077/7eb722c8d42a1efab3dc20079.js");</script></head>
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2bfc98911a3907bd46c12f077/7eb722c8d42a1efab3dc20079.js");</script>
 </html>
